# formula1_api

./: .gitignore  README.md  app.py  config.py  pyproject.toml  run.py
app/: __init__.py  routes.py
app/admin/: helpers.py  routes.py
app/auth/: __init__.py  forms.py  models.py  routes.py
app/charts/: models.py  routes.py
app/static/styles/: index.css
app/static/styles/auth/: login.css
app/static/styles/charts/: list.css  single.css
app/templates/: base.html  index.html
app/templates/admin/: manage.html
app/templates/auth/: auth.html  login.html  register.html
app/templates/charts/: list.html  single.html
src/formula1_app/: __init__.py  routes.py
src/formula1_app/admin/: forms.py  routes.py
src/formula1_app/auth/: forms.py  models.py  routes.py
src/formula1_app/charts/: forms.py  helpers.py  models.py  routes.py
src/formula1_app/static/styles/: index.css
src/formula1_app/static/styles/admin/: charts.css  manage.css
src/formula1_app/static/styles/auth/: auth.css
src/formula1_app/static/styles/charts/: single.css
src/formula1_app/templates/: base.html  index.html
src/formula1_app/templates/admin/: charts.html  manage.html
src/formula1_app/templates/auth/: auth.html
src/formula1_app/templates/charts/: driver_performance_weather.html  drivers.html  list.html  most_successful_drivers.html  most_wins_drivers.html  single.html
