[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
name = "your-package-name"
version = "0.1.0"
description = "Your package description"
author = "Kacper Król"
author_email = "your.email@example.com"

[options]
python_requires = ">=3.10"

[options.extras_require]
test = ["pytest"]

[tool.ruff]
extend-exclude = ["__init__.py"]